ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Certificate_of_Analysis__c/Certificate_of_Analysis__c.object-meta.xml
<CustomObject>
    <label>Certificate of Analysis</label>
    <nameField>
        <displayFormat>COA-{0000}</displayFormat>
        <label>B2B COA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificates of Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>