ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Certificate_of_Analysis__c/fields/CAS_Number__c.field-meta.xml
<CustomField>
    <fullName>CAS_Number__c</fullName>
    <label>CAS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>