ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Certificate_of_Analysis__c/fields/Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Characteristics__c</fullName>
    <label>Characteristics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>