ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Certificate_of_Analysis__c/fields/Display_Date__c.field-meta.xml
<CustomField>
    <fullName>Display_Date__c</fullName>
    <formula>CASE( MONTH(Date__c) , 1, &apos;January&apos;, 2, &apos;February&apos;, 3, &apos;March&apos;, 4, &apos;April&apos;, 5, &apos;May&apos;, 6, &apos;June&apos;, 7, &apos;July&apos;, 8, &apos;August&apos;, 9, &apos;September&apos;, 10, &apos;October&apos;, 11, &apos;November&apos;, &apos;December&apos;) +&apos; &apos;+ TEXT(DAY( Date__c )) +&apos;, &apos;+  TEXT(  YEAR( Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MMMMM DD, YYYY</inlineHelpText>
    <label>Display Date</label>
    <type>Text</type>
</CustomField>