ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Certificate_of_Analysis__c/fields/Display_Id__c.field-meta.xml
<CustomField>
    <fullName>Display_Id__c</fullName>
    <label>Display Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>