ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Certificate_of_Analysis__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>B2B_Certificates_of_Authentication1</relationshipName>
    <type>Lookup</type>
</CustomField>